# edge-compiler

./: .gitignore  CMakeLists.txt  PROFILING_GUIDE.md  README.md  README_numpy_io.md  TensorRT.cpp  TensorRT_profiling.cpp  compare_quantization.py  convert_model.py  cpp_read_npy_cnpy.cpp  dataset.py  export_numpy.py  hello_onnx.py  hello_onnx_graphsurgeon.py  hello_trtexec.sh  hello_tvm.py  mobilenetv2.onnx  profile_onnx.py  tensorRT_example.py  trt_example.cpp  verify_onnx.py
model_files/: config.json  preprocessor_config.json
